# Timer

./: CMakeLists.txt  README.md  clockwindow.cpp  clockwindow.h  clockwindow.ui  main.cpp  timeritem.cpp  timeritem.h  timeritem.ui  timeritem.ui.autosave  timerwindow.cpp  timerwindow.h  timerwindow.ui  titledialog.cpp  titledialog.h  titledialog.ui  ui_ClockWIndow.h  ui_TimerItem.h  ui_TimerWindow.h  ui_TitleDIalog.h
tests/: CMakeLists.txt  clockwindow_test.cpp  clockwindow_test.h  main.cpp  timeritem_test.cpp  timeritem_test.h  timerwindow_test.cpp  timerwindow_test.h
